k8s/01-namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crud-app
---
# k8s/00-label-ingress-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx          # 既に存在する名前空間
  labels:
    ingress-nginx: ""          # ← NetworkPolicy が期待するラベル
