k8s/03-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: crud-app
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
