k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-app-ingress
  namespace: crud-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*) # /api/ で始まるリクエスト
        pathType: Prefix
        backend:
          service:
            name: backend-service # backendへ
            port:
              number: 8080
      - path: /(/|$)(.*) # それ以外 (ルート)
        pathType: Prefix
        backend:
          service:
            name: frontend-service # frontendへ
            port:
              number: 80
